<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_topic"
        android:icon="@drawable/baseline_add_circle_24"
        android:title="@string/add_topic"
        app:showAsAction="ifRoom" />

   <item
        android:id="@+id/notification"
        android:icon="@drawable/baseline_notifications_24"
        android:title="الإشعارات"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/language"
        android:icon="@drawable/baseline_language_24"
        android:title="@string/lang">
        <menu>
            <item
                android:id="@+id/arabic"
                android:title="@string/ar" />
            <item
                android:id="@+id/english"
                android:title="@string/en" />

        </menu>
    </item>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout" />
</menu>