<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.DoctorRegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/doctor_register"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/doctor_register_et_first_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/doctor_register_et_middle_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/middle_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/doctor_register_et_family_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/family_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/doctor_register_tv_birth_date"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/birth_date"
                android:inputType="date"
                android:minHeight="48dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/doctor_register_et_address"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/doctor_register_et_email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/doctor_register_et_phone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/mobile_no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textSize="18sp" />

<!--            <EditText-->
<!--                android:id="@+id/doctor_register_et_password"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="10dp"-->
<!--                android:ems="10"-->
<!--                android:hint="@string/password"-->
<!--                android:inputType="textPassword"-->
<!--                android:minHeight="48dp"-->
<!--                android:textSize="18sp"-->
<!--                />-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/doctor_register_et_password_layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/doctor_register_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

<!--            <EditText-->
<!--                android:id="@+id/doctor_register_et_confirm_password"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="10dp"-->
<!--                android:ems="10"-->
<!--                android:hint="@string/confirm_pass"-->
<!--                android:inputType="textPassword"-->
<!--                android:minHeight="48dp"-->
<!--                android:textSize="18sp" />-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/doctor_register_et_confirm_password_layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/doctor_register_et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_pass"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/doctor_register_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/register"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/have_account"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/doctor_register_tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>