<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.PatientLoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/patient_login_tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/patient_login"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_desc"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/patient_login_tv_login"
        app:layout_constraintStart_toStartOf="@+id/patient_login_tv_login"
        app:layout_constraintTop_toBottomOf="@+id/patient_login_tv_login" />

    <EditText
        android:id="@+id/patient_login_et_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:ems="15"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:drawableStart="@drawable/baseline_alternate_email_24"
        android:drawablePadding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

<!--    <EditText-->
<!--        android:id="@+id/patient_login_et_password"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:ems="15"-->
<!--        android:hint="@string/password"-->
<!--        android:inputType="textPassword"-->
<!--        android:minHeight="48dp"-->
<!--        android:drawableStart="@drawable/baseline_password_24"-->
<!--        android:drawablePadding="5dp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/patient_login_et_email"-->
<!--        app:layout_constraintStart_toStartOf="@+id/patient_login_et_email"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/patient_login_et_email" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patient_login_et_password_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/patient_login_et_email"
        app:layout_constraintStart_toStartOf="@+id/patient_login_et_email"
        app:layout_constraintTop_toBottomOf="@+id/patient_login_et_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patient_login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/patient_login_cb_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/remember_me"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/patient_login_et_password_layout"
        app:layout_constraintTop_toBottomOf="@+id/patient_login_et_password_layout" />

    <TextView
        android:id="@+id/patient_login_tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pass"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/patient_login_cb_remember_me"
        app:layout_constraintEnd_toEndOf="@+id/patient_login_et_password_layout"
        app:layout_constraintTop_toTopOf="@+id/patient_login_cb_remember_me" />

    <Button
        android:id="@+id/patient_login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_login_et_password_layout" />

    <TextView
        android:id="@+id/patient_login_tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/do_not_have_account"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_login_btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>